# RaspberryPi-Note

./: .gitignore  README.md  测量.xlsx
1-new pi/: README.md
1-new pi/bash_cpu_temp/: README.md  temp.sh
1-new pi/cpp_opencv_test/: Makefile  README.md  main.cpp
1-new pi/pic/: README.md
1-new pi/py_cam_test/: README.md  py_cam_test.py
2-system backup and mount/: README.md  backup.sh
3-system backup/: README.md  backup.sh
4-pico-vscode-project/rpi_note/: CMakeLists.txt
5-wlan1-and-systemd/: send_ip.py  sendip.service
raspberry-pi-4-model-b-1.snapshot.3/: README.md  Raspberry Pi 4 Model B.SLDASM
